<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:theme="@style/NanodegreeApps">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/NanodegreeAppsTitle"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="33dp"
        />

    <Space
        android:layout_width="190dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:id="@+id/space_sizer"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_button"
        android:layout_below="@+id/space_sizer"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_scores"
        android:id="@+id/super_duo_scores_button"
        android:layout_below="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_library"
        android:id="@+id/super_duo_library_button"
        android:layout_below="@+id/super_duo_scores_button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"
        android:layout_below="@+id/super_duo_library_button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/space_sizer"
        android:layout_alignRight="@+id/space_sizer"
        android:theme="@style/NanodegreeAppsCapstoneButton"
        />



</RelativeLayout>
